feat!: implement a happy path to join a group
Based on https://github.com/solidcouch/geoindex
and diverges here.
