# src/app.ts
@@ -5,35 +5,29 @@ import { solidIdentity } from '@soid/koa'
 import Koa from 'koa'
 import helmet from 'koa-helmet'
 import serve from 'koa-static'
-import {
-  fetchThing,
-  saveThing,
-  validateThing,
-} from './controllers/processThing.js'
-import { queryThings } from './controllers/query.js'
-import { initializeDatabase } from './database.js'
-import { authorizeGroups } from './middlewares/authorizeGroup.js'
-import { type AppConfig, loadConfig } from './middlewares/loadConfig.js'
+import { addPersonToGroup } from './controllers/inbox.js'
+import { loadConfig } from './middlewares/loadConfig.js'
 import { solidAuth } from './middlewares/solidAuth.js'
 import { validateBody } from './middlewares/validate.js'
 import * as schema from './schema.js'
 
+export interface AppConfig {
+  readonly webId: string
+  readonly isBehindProxy?: boolean
+  readonly groupToJoin: string
+}
+
 const createApp = async (config: AppConfig) => {
   const identity = solidIdentity(config.webId)
 
-  await initializeDatabase(config.database)
-
   const app = new Koa()
-  app.proxy = config.isBehindProxy
+  app.proxy = Boolean(config.isBehindProxy)
   const router = new Router<{ config: AppConfig } & { user: string }>()
 
-  router
-    .use(identity.routes())
-    .post(
-      '/inbox',
-      solidAuth,
-      authorizeGroups(config.allowedGroups),
-      /* #swagger.requestBody = {
+  router.use(identity.routes()).post(
+    '/inbox',
+    solidAuth,
+    /* #swagger.requestBody = {
         required: true,
         content: {
           'application/ld+json': {
@@ -44,17 +38,9 @@ const createApp = async (config: AppConfig) => {
         },
       }
       */
-      validateBody(schema.notification),
-      fetchThing,
-      validateThing,
-      saveThing,
-    )
-    .get(
-      '/query',
-      solidAuth,
-      authorizeGroups(config.allowedGroups),
-      queryThings,
-    )
+    validateBody(schema.notification),
+    addPersonToGroup(config.groupToJoin),
+  )
 
   app
     .use(helmet.default())
